force-app/main/default/objects/PDRI__Deployment_Plan__c/PDRI__Deployment_Plan__c.object-meta.xml
<CustomObject>
    <description>Encapsulate and store the data sets to execute and their sequence.</description>
    <label>Deployment Plan</label>
    <nameField>
        <label>Deployment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>