force-app/main/default/objects/PDRI__Deployment_Plan__c/fields/PDRI__Folder__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies an optional folder that contains the data set.</inlineHelpText>
    <label>Folder</label>
    <referenceTo>PDRI__Folder__c</referenceTo>
    <relationshipLabel>Deployment Plans</relationshipLabel>
    <relationshipName>Deployment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>