force-app/main/default/objects/PDRI__Deployment_Plan__c/fields/PDRI__Of_Deployment_Plan_Items__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Of_Deployment_Plan_Items__c</fullName>
    <label># Of Deployment Plan Steps</label>
    <summaryForeignKey>PDRI__Deployment_Plan_Step__c.PDRI__Deployment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>