force-app/main/default/objects/PDRI__Deployment_Plan__c/listViews/PDRI__All.listView-meta.xml
<ListView>
    <fullName>PDRI__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>